added trip validator
-validator to prevent end date from being set before start date when adding or editing trip

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,3 +8,4 @@ message.regError=An account for that username/email already exists. Please enter
 message.lastName=Last name is required
 message.firstName=First name required
 message.badEmail=Invalid email address
+message.badEnd=End date comes before start date
