--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,3 +9,5 @@ message.lastName=Last name is required
 message.firstName=First name required
 message.badEmail=Invalid email address
 message.badEnd=End date comes before start date
+message.tripStart=The date needs to be after the start of your trip
+message.tripEnd=The date needs to be before the start of your trip
