--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,3 +11,4 @@ message.badEmail=Invalid email address
 message.badEnd=End date comes before start date
 message.tripStart=The date needs to be after the start of your trip
 message.tripEnd=The date needs to be before the start of your trip
+message.checkIn=The check-out needs to be after the check-in
