trip accommodation, itinerary, reservation sorting
-sorted lists earliest to latest when retrieved from Trip object
-increased print icon
-fixed an error message

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,5 +10,5 @@ message.firstName=First name required
 message.badEmail=Invalid email address
 message.badEnd=End date comes before start date
 message.tripStart=The date needs to be after the start of your trip
-message.tripEnd=The date needs to be before the start of your trip
+message.tripEnd=The date needs to be before the end of your trip
 message.checkIn=The check-out needs to be after the check-in
