error fixing, adding some validations, and refactoring
-rearranged some stuff in main controller to fix 500 error (needs validation first without returning, then if result has errors, re-add attributes, then return)
-refactored validations into validation classes
-Trip field of accommodation, itinerary, reservation is now being set
-added hidden id field to accom/itin/reserv html forms in order to maintain id, in order to fix error where id pathvariable was lost after refreshing an edit form
-added trip validation to prevent duplicate titles and to keep titles less than 26 characters in order to prevent page format from breaking

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,3 +12,6 @@ message.badEnd=End date comes before start date
 message.tripStart=The date needs to be after the start of your trip
 message.tripEnd=The date needs to be before the end of your trip
 message.checkIn=The check-out needs to be after the check-in
+message.titleLong=Title must be less than 26 chars
+message.titleExists=A trip already exists with that title
+message.destEmpty=Trip must have destinations
