user validation and refactor
-no passwords under 8 chars allowed
-moved some code around for validating users

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,13 +1,15 @@
-message.username=Username required
+message.email=Email required
 message.password=Password required
 message.badCredentials=Invalid Credentials
 message.logoutError=Sorry, error logging out
 message.logoutSucc=Logged out successfully.
 message.regSucc=You registered successfully.
-message.regError=An account for that username/email already exists. Please enter a different username.
-message.lastName=Last name is required
+message.regError=An account for that username/email already exists.
+message.lastName=Last name required
 message.firstName=First name required
 message.badEmail=Invalid email address
+message.shortPass=Password must be at least 8 characters
+message.noSpacePass=Password cannot contain empty spaces
 message.badEnd=End date comes before start date
 message.tripStart=The date needs to be after the start of your trip
 message.tripEnd=The date needs to be before the end of your trip
