more server-side & client-side validation
-added server-side validation for all required fields
-added client-side validation for required fields that were missing it

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,3 +18,9 @@ message.titleLong=Title must be less than 26 chars
 message.titleExists=A trip already exists with that title
 message.destEmpty=Trip must have destinations
 message.itinDupl=An itinerary already exists for this date
+message.noTitle=Title is required
+message.noDate=Date is required
+message.noStart=Start date is required
+message.noEnd=End date is required
+message.noCheckIn=Check-in is required
+message.noCheckOut=Check-out is required
