error handling for bad date input
-web binders now handle bad date input if user doesn't use date picker

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,3 +24,4 @@ message.noStart=Start date is required
 message.noEnd=End date is required
 message.noCheckIn=Check-in is required
 message.noCheckOut=Check-out is required
+message.badDate=Invalid date format
