validation on longitude and latitude
-90 to 90 latitude
-180 to 180 longitude

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,3 +25,7 @@ message.noEnd=End date is required
 message.noCheckIn=Check-in is required
 message.noCheckOut=Check-out is required
 message.badDate=Invalid date format
+message.noLong=Must have longitude with latitude
+message.noLat=Must have latitude with longitude
+message.badLong=Invalid longitude
+message.badLat=Invalid latitude
